Adding more tests

--- a/Unity.Regression.csproj
+++ b/Unity.Regression.csproj
@@ -9,7 +9,7 @@
     <PackageIconUrl>https://avatars1.githubusercontent.com/u/12849707</PackageIconUrl>
     <RepositoryType>git</RepositoryType>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
-    <TargetFrameworks>net48;net46;net45</TargetFrameworks>
+    <TargetFrameworks Condition=" '$(Framework)' == '' ">net48;net46;net45</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
@@ -26,14 +26,25 @@
     <None Remove="LICENSE" />
   </ItemGroup>
 
+  <PropertyGroup>
+    <DefineConstants Condition="'$(TargetFramework)' == 'net48'">$(DefineConstants);UNITY_V6</DefineConstants>
+    <DefineConstants Condition="'$(TargetFramework)' == 'net46'">$(DefineConstants);UNITY_V5</DefineConstants>
+    <DefineConstants Condition="'$(TargetFramework)' == 'net45'">$(DefineConstants);UNITY_V4</DefineConstants>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Condition="'$(TargetFramework)' == 'net48'" Include="Unity.Container" Version="6.0.*-*" />
     <PackageReference Condition="'$(TargetFramework)' == 'net46'" Include="Unity.Container" Version="5.11.*" />
     <PackageReference Condition="'$(TargetFramework)' == 'net45'" Include="Unity" Version="4.0.1" />
   </ItemGroup>
 
-  <ItemGroup>
-    <Compile Condition="'$(TargetFramework)' != 'net45'" Remove="Container\UnityContainerFixture.4.cs" />
+  <ItemGroup Condition="'$(TargetFramework)' != 'net45'" >
+    <Compile Remove="Container\UnityContainerFixture.4.cs" />
+    <Compile Remove="Injection\InjectionParameterValueFixture.v4.cs" />
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'net45'" >
+    <Compile Remove="Injection\InjectionParameterValueFixture.v5.cs" />
   </ItemGroup>
 
 </Project>
