--- a/Unity.Regression.Tests.csproj
+++ b/Unity.Regression.Tests.csproj
@@ -11,30 +11,30 @@
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <UnityContainer>..\Container\src\Unity.Container.csproj</UnityContainer>
     <UnityLegacy>..\unity\source\Unity\Src\Unity.csproj</UnityLegacy>
-    <TargetFramework>net45</TargetFramework>
   </PropertyGroup>
-  
+
   <PropertyGroup>
-    <!--<TargetFrameworks Condition="!Exists('$(UnityContainer)')">net47;net46;net45</TargetFrameworks>
-    <TargetFrameworks Condition="Exists('$(UnityContainer)')">net48;net47;net46;net45</TargetFrameworks>-->
-  </PropertyGroup>  
+    <TargetFrameworks Condition="!Exists('$(UnityContainer)')">net47;net46;net45</TargetFrameworks>
+    <TargetFrameworks Condition="Exists('$(UnityContainer)')">net48;net47;net46;net45</TargetFrameworks>
+  </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="MSTest.TestAdapter" Version="2.1.2">
-        <PrivateAssets>all</PrivateAssets>
+      <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="MSTest.TestFramework" Version="2.1.2">
-        <PrivateAssets>all</PrivateAssets>
+      <PrivateAssets>all</PrivateAssets>
     </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
     <None Remove=".git" />
+    <None Remove=".gitattributes" />
     <None Remove=".gitignore" />
     <None Remove="LICENSE" />
   </ItemGroup>
 
-  
+
   <PropertyGroup>
     <DefineConstants Condition="'$(TargetFramework)' == 'net48'">$(DefineConstants);UNITY</DefineConstants>
     <DefineConstants Condition="'$(TargetFramework)' == 'net47'">$(DefineConstants);UNITY_V6</DefineConstants>
