--- a/Unity.Regression.Tests.csproj
+++ b/Unity.Regression.Tests.csproj
@@ -15,7 +15,7 @@
 
   <PropertyGroup>
     <TargetFrameworks Condition="!Exists('$(UnityContainer)')">net47;net46;net45</TargetFrameworks>
-    <TargetFrameworks Condition="Exists('$(UnityContainer)')">net48;net47;net46;net45</TargetFrameworks>
+    <TargetFramework Condition="Exists('$(UnityContainer)')">net48</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
