--- a/Unity.Regression.Tests.csproj
+++ b/Unity.Regression.Tests.csproj
@@ -1,68 +1,77 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <Description>Unity Container Regression Tests</Description>
-    <Copyright>Copyright © .NET Foundation and Contributors. All Rights Reserved</Copyright>
-    <PackageProjectUrl>https://github.com/unitycontainer/regression-tests</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/unitycontainer/regression-tests</RepositoryUrl>
-    <PackageLicenseUrl>https://github.com/unitycontainer/regression-tests/blob/master/LICENSE</PackageLicenseUrl>
-    <PackageIconUrl>https://avatars1.githubusercontent.com/u/12849707</PackageIconUrl>
-    <RepositoryType>git</RepositoryType>
-    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
-    <UnityContainer>..\Container\src\Unity.Container.csproj</UnityContainer>
-    <UnityLegacy>..\unity\source\Unity\Src\Unity.csproj</UnityLegacy>
-  </PropertyGroup>
+	<PropertyGroup>
+		<Description>Unity Container Regression Tests</Description>
+		<Copyright>Copyright © .NET Foundation and Contributors. All Rights Reserved</Copyright>
+		<PackageProjectUrl>https://github.com/unitycontainer/regression-tests</PackageProjectUrl>
+		<RepositoryUrl>https://github.com/unitycontainer/regression-tests</RepositoryUrl>
+		<PackageLicenseUrl>https://github.com/unitycontainer/regression-tests/blob/master/LICENSE</PackageLicenseUrl>
+		<PackageIconUrl>https://avatars1.githubusercontent.com/u/12849707</PackageIconUrl>
+		<RepositoryType>git</RepositoryType>
+		<GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+		<UnityContainer>..\Container\src\Unity.Container.csproj</UnityContainer>
+		<UnityLegacy>..\unity\source\Unity\Src\Unity.csproj</UnityLegacy>
+	</PropertyGroup>
 
-  <PropertyGroup Condition="Exists('$(UnityLegacy)')">
-    <TargetFramework>net45</TargetFramework>
-  </PropertyGroup>
+	<PropertyGroup Condition="Exists('$(UnityLegacy)')">
+		<TargetFramework>net45</TargetFramework>
+	</PropertyGroup>
 
-  <PropertyGroup Condition="Exists('$(UnityContainer)') AND Exists('..\Container\package.sln')">
-    <TargetFramework>net46</TargetFramework>
-  </PropertyGroup>
+	<PropertyGroup Condition="Exists('$(UnityContainer)') AND Exists('..\Container\package.sln')">
+		<TargetFramework>net46</TargetFramework>
+	</PropertyGroup>
 
 	<PropertyGroup Condition="Exists('$(UnityContainer)') AND !Exists('..\Container\package.sln')">
 		<TargetFramework>net48</TargetFramework>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="!Exists('$(UnityContainer)') AND !Exists('$(UnityLegacy)') ">
-    <TargetFrameworks>net47;net46;net45</TargetFrameworks>
-  </PropertyGroup>
+		<!--<TargetFrameworks>net47;net46;net45</TargetFrameworks>-->
+		<TargetFrameworks>net46;net45</TargetFrameworks>
+	</PropertyGroup>
 
 	<ItemGroup Condition="'$(TargetFramework)' == 'net45'">
-	  <None Remove="Specification\Variants\**" />
-	  <Compile Remove="Specification\Variants\**" />
-	  <EmbeddedResource Remove="Specification\Variants\**" />
+		<None Remove="Specification\Variants\**" />
+		<Compile Remove="Specification\Variants\**" />
+		<EmbeddedResource Remove="Specification\Variants\**" />
 	</ItemGroup>
 
 
-  <ItemGroup>
-    <PackageReference Include="MSTest.TestAdapter" Version="2.1.2">
-      <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
-    <PackageReference Include="MSTest.TestFramework" Version="2.1.2">
-      <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="MSTest.TestAdapter" Version="2.1.2">
+			<PrivateAssets>all</PrivateAssets>
+		</PackageReference>
+		<PackageReference Include="MSTest.TestFramework" Version="2.1.2">
+			<PrivateAssets>all</PrivateAssets>
+		</PackageReference>
+	</ItemGroup>
 
-  <ItemGroup>
-    <None Remove=".git" />
-    <None Remove=".gitattributes" />
-    <None Remove=".gitignore" />
-    <None Remove="LICENSE" />
-  </ItemGroup>
+	<ItemGroup>
+		<None Remove=".git" />
+		<None Remove=".gitattributes" />
+		<None Remove=".gitignore" />
+		<None Remove="LICENSE" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <Compile Condition="'$(TargetFramework)' != 'net45'" Remove="Compatibility.v4.cs" />
-	<Compile Condition="'$(TargetFramework)' == 'net45'" Remove="Resolution\Generic\Enumerables.cs" />
-  </ItemGroup>
+	<!-- Build Compatibility -->
 
-  <ItemGroup>
-    <ProjectReference Condition="'$(TargetFramework)' == 'net48'" Include="$(UnityContainer)" />
-    <PackageReference Condition="'$(TargetFramework)' == 'net47'" Include="Unity.Container" Version="6.0.*-*" />
-    <PackageReference Condition="'$(TargetFramework)' == 'net46'" Include="Unity.Container" Version="5.11.*" />
-    <PackageReference Condition="'$(TargetFramework)' == 'net45' AND !Exists('$(UnityLegacy)')" Include="Unity" Version="4.0.1" />
-    <ProjectReference Condition="'$(TargetFramework)' == 'net45' AND Exists('$(UnityLegacy)')" Include="$(UnityLegacy)" />
-  </ItemGroup>
+	<ItemGroup>
+		<Compile Condition="'$(TargetFramework)' != 'net45'" Remove="Compatibility.v4.cs" />
+	</ItemGroup>
+
+	<!-- Not supported by v4 -->
+
+	<ItemGroup Condition="'$(TargetFramework)' == 'net45'">
+		<Compile Remove="Resolution\Generic\Enumerables.cs" />
+		<Compile Remove="Specification\Constructors\Parameters\WithDefault.v5.cs" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Condition="'$(TargetFramework)' == 'net48'" Include="$(UnityContainer)" />
+		<PackageReference Condition="'$(TargetFramework)' == 'net47'" Include="Unity.Container" Version="6.0.*-*" />
+		<PackageReference Condition="'$(TargetFramework)' == 'net46'" Include="Unity.Container" Version="5.11.*" />
+		<PackageReference Condition="'$(TargetFramework)' == 'net45' AND !Exists('$(UnityLegacy)')" Include="Unity" Version="4.0.1" />
+		<ProjectReference Condition="'$(TargetFramework)' == 'net45' AND Exists('$(UnityLegacy)')" Include="$(UnityLegacy)" />
+	</ItemGroup>
 
 </Project>
