--- a/Unity.Regression.Tests.csproj
+++ b/Unity.Regression.Tests.csproj
@@ -26,8 +26,7 @@
 	</PropertyGroup>
 
 	<PropertyGroup Condition="!Exists('$(UnityContainer)') AND !Exists('$(UnityLegacy)') ">
-		<!--<TargetFrameworks>net47;net46;net45</TargetFrameworks>-->
-		<TargetFrameworks>net46;net45</TargetFrameworks>
+		<TargetFrameworks>net47;net46;net45</TargetFrameworks>
 	</PropertyGroup>
 
 	<ItemGroup Condition="'$(TargetFramework)' == 'net45'">
