--- a/Unity.Regression.Tests.csproj
+++ b/Unity.Regression.Tests.csproj
@@ -60,6 +60,8 @@
 
 	<ItemGroup Condition="'$(TargetFramework)' == 'net45'">
 		<Compile Remove="Resolution\Generic\Enumerables.cs" />
+		<Compile Remove="Resolution\Overrides\Field.cs" />
+		<Compile Remove="Resolution\Overrides\Dependency.V5.cs" />
 		<Compile Remove="Specification\Constructors\Parameters\WithDefault.v5.cs" />
 		<Compile Remove="Specification\Variants\**" />
 		<None Remove="Specification\Variants\**" />
