--- a/Unity.Regression.Tests.csproj
+++ b/Unity.Regression.Tests.csproj
@@ -59,21 +59,20 @@
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(TargetFramework)' == 'net45'">
+		<Compile Remove="Resolution\Lazy\Enumerable.cs" />
+		<Compile Remove="Resolution\Array\BuiltInTypesResolution.V5.cs" />
 		<Compile Remove="Resolution\Generic\Enumerables.cs" />
 		<Compile Remove="Resolution\Overrides\Field.cs" />
 		<Compile Remove="Resolution\Overrides\Dependency.V5.cs" />
+		<Compile Remove="Resolution\Enumerable\**" />
 		<Compile Remove="Specification\Constructors\Parameters\WithDefault.v5.cs" />
 		<Compile Remove="Specification\Variants\**" />
-		<None Remove="Specification\Variants\**" />
-		<EmbeddedResource Remove="Specification\Variants\**" />
 	</ItemGroup>
 	
 	<!--Relese Buid-->
 
 	<ItemGroup Condition=" '$(Configuration)' == 'Release'">
-		<None Remove="Breaking Changes\**" />
 		<Compile Remove="Breaking Changes\**" />
-		<EmbeddedResource Remove="Breaking Changes\**" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -85,8 +84,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="Breaking Changes\" />
-	  <Folder Include="Public.API\Compatibility\" />
+		<Folder Include="Breaking Changes\" />
+		<Folder Include="Public.API\Compatibility\" />
 	</ItemGroup>
 
 </Project>
