--- a/Unity.Regression.Tests.csproj
+++ b/Unity.Regression.Tests.csproj
@@ -76,8 +76,8 @@
 		<Compile Remove="Specification\Parameters\Injected\Value.V5.cs" />
 		<Compile Remove="Specification\Parameters\Injected\NonValue.V6.cs" />
 		<Compile Remove="Specification\Parameters\Injected\Value.V6.cs" />
-		<Compile Remove="Specification\Parameters\Annotation\Annotated.V5.cs" />
-		<Compile Remove="Specification\Parameters\Annotation\Annotated.V6.cs" />
+		<Compile Remove="Specification\Parameters\Annotation\Required.V5.cs" />
+		<Compile Remove="Specification\Parameters\Annotation\Required.V6.cs" />
 		<Compile Remove="Specification\Parameters\Defaults\WithDefaults.cs" />
 		<Compile Remove="Specification\Parameters\Defaults\WithDefaults.V6.cs" />
 		<Compile Remove="Specification\Constructors\Parameters\WithDefault.v5.cs" />
@@ -92,7 +92,7 @@
 		<Compile Remove="Specification\Parameters\Injected\Value.V6.cs" />
 		<Compile Remove="Specification\Parameters\Injected\NonValue.V6.cs" />
 		<Compile Remove="Specification\Parameters\Defaults\WithDefaults.V6.cs" />
-		<Compile Remove="Specification\Parameters\Annotation\Annotated.V6.cs" />
+		<Compile Remove="Specification\Parameters\Annotation\Required.V6.cs" />
 	</ItemGroup>
 
 
