--- a/Unity.Regression.Tests.csproj
+++ b/Unity.Regression.Tests.csproj
@@ -63,8 +63,8 @@
 	<!-- Not supported by v4 -->
 
 	<ItemGroup Condition="'$(TargetFramework)' != 'net45'">
-		<Compile Remove="Specification\Fields\Pattern\Disabled.V4.cs" />
-		<Compile Remove="Specification\Properties\Pattern\Disabled.V4.cs" />
+		<Compile Remove="Specification\Fields\Pattern\Unsupported.V4.cs" />
+		<Compile Remove="Specification\Properties\Pattern\Unsupported.V4.cs" />
 		<Compile Remove="Breaking Changes\BreakingChanges.v4.cs" />
 		<Compile Remove="Public.API\Compatibility\Compatibility.V4.cs" />
 	</ItemGroup>
@@ -93,8 +93,8 @@
 
 	<!-- Not supported by v5 -->
 	<ItemGroup Condition="'$(TargetFramework)' != 'net46' AND '$(TargetFramework)' != 'net461'">
-		<Compile Remove="Specification\Fields\Pattern\Disabled.V5.cs" />
-		<Compile Remove="Specification\Properties\Pattern\Disabled.V5.cs" />
+		<Compile Remove="Specification\Fields\Pattern\Unsupported.V5.cs" />
+		<Compile Remove="Specification\Properties\Pattern\Unsupported.V5.cs" />
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(TargetFramework)' == 'net46' OR '$(TargetFramework)' == 'net461'">
