--- a/Unity.Regression.Tests.csproj
+++ b/Unity.Regression.Tests.csproj
@@ -71,13 +71,17 @@
 
 	<ItemGroup Condition="$(TargetFramework.StartsWith('net45'))">
 		<Compile Remove="Issues\GitHub\**" />
+		
 		<Compile Remove="Pattern\Injected\ByName.cs" />
+		<Compile Remove="Pattern\Implicit\WithDefault.cs" />
+		
 		<Compile Remove="Resolution\Lazy\Enumerable.cs" />
 		<Compile Remove="Resolution\Array\BuiltInTypesResolution.V5.cs" />
 		<Compile Remove="Resolution\Generic\Enumerables.cs" />
 		<Compile Remove="Resolution\Overrides\Field.cs" />
 		<Compile Remove="Resolution\Overrides\Dependency.V5.cs" />
 		<Compile Remove="Resolution\Enumerable\**" />
+		
 		<Compile Remove="Specification\Parameters\Injected\Value.V5.cs" />
 		<Compile Remove="Specification\Parameters\Injected\NonValue.V6.cs" />
 		<Compile Remove="Specification\Parameters\Injected\Value.V6.cs" />
