--- a/Unity.Regression.Tests.csproj
+++ b/Unity.Regression.Tests.csproj
@@ -75,6 +75,8 @@
 		<Compile Remove="Pattern\Annotated\WithDefault.cs" />
 		<Compile Remove="Pattern\Implicit\WithDefault.cs" />
 		<Compile Remove="Pattern\Injected\ByName.cs" />
+		<Compile Remove="Pattern\Injected\ByFactory.cs" />
+		<Compile Remove="Pattern\Injected\Parameters\Factory.cs" />
 		
 		<Compile Remove="Resolution\Lazy\Enumerable.cs" />
 		<Compile Remove="Resolution\Array\BuiltInTypesResolution.V5.cs" />
