--- a/Unity.Regression.Tests.csproj
+++ b/Unity.Regression.Tests.csproj
@@ -23,8 +23,26 @@
 
 	<PropertyGroup Condition="!Exists('$(UnityContainer)') AND !Exists('$(UnityLegacy)') ">
 		<!--<TargetFrameworks>net47;net46;net45</TargetFrameworks>-->
-		<TargetFrameworks>net46;net45</TargetFrameworks>
+		<TargetFrameworks>net5.0;net46;net45</TargetFrameworks>
 	</PropertyGroup>
+
+
+
+	<!-- Definitions -->
+
+	<PropertyGroup>
+		<DefineConstants Condition="$(TargetFramework.StartsWith('net5')) ">V6</DefineConstants>
+		<DefineConstants Condition="$(TargetFramework.StartsWith('net46'))">V5</DefineConstants>
+		<DefineConstants Condition="$(TargetFramework.StartsWith('net45'))">V4</DefineConstants>
+	</PropertyGroup>
+
+	<ItemGroup>
+		<PackageReference Condition="'$(TargetFramework)' == 'net5.0'" Include="Unity.Container" Version="6.0.*-*" />
+		<ProjectReference Condition="'$(TargetFramework)' == 'net48' " Include="$(UnityContainer)" />
+		<PackageReference Condition="'$(TargetFramework)' == 'net46' " Include="Unity.Container" Version="5.11.*" />
+		<PackageReference Condition="'$(TargetFramework)' == 'net45' AND !Exists('$(UnityLegacy)')" Include="Unity" Version="4.0.1" />
+		<ProjectReference Condition="'$(TargetFramework)' == 'net45' AND Exists('$(UnityLegacy)')" Include="$(UnityLegacy)" />
+	</ItemGroup>
 
 
 	<!-- Temporary exclusions -->
@@ -39,6 +57,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.0" />
 		<PackageReference Include="MSTest.TestAdapter" Version="2.1.2">
 			<PrivateAssets>all</PrivateAssets>
 		</PackageReference>
@@ -98,23 +117,6 @@
 
 	<ItemGroup Condition="'$(Configuration)' == 'Release'">
 		<Compile Remove="Breaking Changes\**" />
-	</ItemGroup>
-
-
-	<!-- Definitions -->
-
-	<PropertyGroup>
-		<DefineConstants Condition="$(TargetFramework.StartsWith('net45'))">V4</DefineConstants>
-		<DefineConstants Condition="$(TargetFramework.StartsWith('net46'))">V5</DefineConstants>
-		<DefineConstants Condition="$(TargetFramework.StartsWith('net47'))">V6</DefineConstants>
-	</PropertyGroup>
-
-	<ItemGroup>
-		<ProjectReference Condition="'$(TargetFramework)' == 'net48'" Include="$(UnityContainer)" />
-		<PackageReference Condition="'$(TargetFramework)' == 'net47'" Include="Unity.Container" Version="6.0.*-*" />
-		<PackageReference Condition="'$(TargetFramework)' == 'net46'" Include="Unity.Container" Version="5.11.*" />
-		<PackageReference Condition="'$(TargetFramework)' == 'net45' AND !Exists('$(UnityLegacy)')" Include="Unity" Version="4.0.1" />
-		<ProjectReference Condition="'$(TargetFramework)' == 'net45' AND Exists('$(UnityLegacy)')" Include="$(UnityLegacy)" />
 	</ItemGroup>
 
 	<ItemGroup>
